--- a/tests/gh.html
+++ b/tests/gh.html
@@ -72,7 +72,8 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
       app.scene.addNode(new SkyboxNode({url: '../media/textures/eilenriede-park-2k.png'}));
 	//let GH_City = new Gltf2Node({url: '../media/gltf/GH_City/L17_Low_Core_2_by_2.glb'}); // FPS TEST
-	let GH_City = new Gltf2Node({url: '../media/gltf/GH_City/L17_Low_Core_4_by_3.glb'}); // Transfer Speed TEST
+	//let GH_City = new Gltf2Node({url: '../media/gltf/GH_City/L17_Low_Core_4_by_3.glb'}); // Transfer Speed TEST
+	let GH_City = new Gltf2Node({url: '../media/gltf/GH_City/L17_Low_Core_1_by_1.glb'}); // Transfer Speed TEST
 	  
 	//let GH_City  = new Gltf2Node({url: '../media/gltf/GH_City/GH_L17_Core_3_by_3_part_1.glb'}); // Loading TEST
 	//let GH_City2 = new Gltf2Node({url: '../media/gltf/GH_City/GH_L17_Core_3_by_3_part_2.glb'}); // Loading TEST
