--- a/tests/gh_hmd.html
+++ b/tests/gh_hmd.html
@@ -26,7 +26,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     <link rel='icon' type='image/png' sizes='96x96' href='../favicon-96x96.png'>
     <link rel='stylesheet' href='../css/common.css'>
 
-    <title>GH City - L17</title>
+    <title>GH City - L17 - HMD</title>
   </head>
   <body>
     <header>
