--- a/tests/gh_hmd.html
+++ b/tests/gh_hmd.html
@@ -56,28 +56,28 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       class CustomWebXRSampleApp extends WebXRSampleApp {
         onInitRenderer() {
           super.onInitRenderer();
-
-          //this.renderer.globalLightDir = [-0.2, -1.0, -0.2];
-          //this.renderer.globalLightColor = [7.0, 7.0, 8.0];
+          this.renderer.globalLightDir = [-0.2, -1.0, -0.2];
+          this.renderer.globalLightColor = [7.0, 7.0, 8.0];
         }
       };
 
       let app = new CustomWebXRSampleApp({
         referenceSpace: 'local-floor'
       });
-      document.querySelector('header').appendChild(app.xrButton.domElement);
+	    
+      	document.querySelector('header').appendChild(app.xrButton.domElement);
 
-      app.scene.addNode(new SkyboxNode({url: '../media/textures/eilenriede-park-2k.png'}));
-	  let GH_City = new Gltf2Node({url: '../media/gltf/GH_City/Tile_Tile9_2_0_MB_KSR_5_by_4.glb'}); // FPS TEST
+      	app.scene.addNode(new SkyboxNode({url: '../media/textures/eilenriede-park-2k.png'}));
+	let GH_City = new Gltf2Node({url: '../media/gltf/GH_City/Tile_Tile9_2_0_MB_KSR_5_by_4.glb'}); // FPS TEST
 
-	  //vec3.set(GH_City.scale, 0.01, 0.01, 0.01);
-	  mat4.translate(GH_City.matrix, GH_City.matrix, [-250.0, -100.0, -100.0]);
+	//vec3.set(GH_City.scale, 0.01, 0.01, 0.01);
+	mat4.translate(GH_City.matrix, GH_City.matrix, [-250.0, -100.0, -100.0]);
 
-	  // Rotate the scene 90deg so that you start looking down the gallery.
-    //quat.rotateY(GH_City.rotation, GH_City.rotation, Math.PI / 2.0);
+	// Rotate the scene 90deg so that you start looking down the gallery.
+    	//quat.rotateY(GH_City.rotation, GH_City.rotation, Math.PI / 2.0);
 
-      app.scene.addNode(GH_City);
-      app.scene.standingStats(true);
+      	app.scene.addNode(GH_City);
+      	app.scene.standingStats(true);
 	  
 
       // Start the XR application.
