--- a/tests/gh_hmd.html
+++ b/tests/gh_hmd.html
@@ -77,8 +77,8 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     	//quat.rotateY(GH_City.rotation, GH_City.rotation, Math.PI / 2.0);
 
       	app.scene.addNode(GH_City);
-      	//app.scene.standingStats(true);
-	app.scene.standingStats(false);
+      	app.scene.standingStats(true);
+	//app.scene.standingStats(false);
 	  
 
       // Start the XR application.
