--- a/tests/gh_hmd.html
+++ b/tests/gh_hmd.html
@@ -56,8 +56,8 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
       class CustomWebXRSampleApp extends WebXRSampleApp {
         onInitRenderer() {
           super.onInitRenderer();
-          this.renderer.globalLightDir = [-0.2, -1.0, -0.2];
-          this.renderer.globalLightColor = [7.0, 7.0, 8.0];
+          //this.renderer.globalLightDir = [-0.2, -1.0, -0.2];
+          //this.renderer.globalLightColor = [7.0, 7.0, 8.0];
         }
       };
 
